--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,9 @@
 /[Ll]ogs/
 /[Uu]ser[Ss]ettings/
 
+# My ignore files
+/Assets/TextMesh Pro/*
+/Assets/TextMesh Pro.meta
 *.zip
 
 # MemoryCaptures can get excessive in size.
